<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/addTaskLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/taskTitleInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/taskTitleInput"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/task_title"
                    android:inputType="textPersonName" />
            </RelativeLayout>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_vertical"
                android:text="@string/time"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="?android:attr/textColorPrimary" />

            <RelativeLayout
                android:id="@+id/taskTimeInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/add_task_page_padding"
                android:paddingEnd="0dp">

                <Spinner
                    android:id="@+id/taskTimeInput"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/add_task_size"
                    android:entries="@array/task_time" />
            </RelativeLayout>

            <TextView
                android:id="@+id/repeat"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/repeat"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="?android:attr/textColorPrimary" />

            <LinearLayout
                android:id="@+id/repeatDaysInput"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/add_task_page_padding"
                android:paddingEnd="0dp">

                <ToggleButton
                    android:id="@+id/sun"
                    android:layout_width="@dimen/add_task_size"
                    android:layout_height="@dimen/add_task_size"
                    android:background="@drawable/repeat_days_button"
                    android:text="@string/sunday"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textOff="@string/sunday"
                    android:textOn="@string/sunday" />

                <View
                    android:id="@+id/repeatDaysDivider"
                    android:layout_width="@dimen/repeat_days_margin"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <ToggleButton
                    android:id="@+id/mon"
                    android:layout_width="@dimen/add_task_size"
                    android:layout_height="@dimen/add_task_size"
                    android:background="@drawable/repeat_days_button"
                    android:checked="true"
                    android:text="@string/monday"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textOff="@string/monday"
                    android:textOn="@string/monday" />

                <View
                    android:id="@+id/repeatDaysDivider2"
                    android:layout_width="@dimen/repeat_days_margin"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <ToggleButton
                    android:id="@+id/tue"
                    android:layout_width="@dimen/add_task_size"
                    android:layout_height="@dimen/add_task_size"
                    android:background="@drawable/repeat_days_button"
                    android:checked="true"
                    android:text="@string/tuesday"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textOff="@string/tuesday"
                    android:textOn="@string/tuesday" />

                <View
                    android:id="@+id/repeatDaysDivider3"
                    android:layout_width="@dimen/repeat_days_margin"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <ToggleButton
                    android:id="@+id/wed"
                    android:layout_width="@dimen/add_task_size"
                    android:layout_height="@dimen/add_task_size"
                    android:background="@drawable/repeat_days_button"
                    android:checked="true"
                    android:text="@string/wednesday"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textOff="@string/wednesday"
                    android:textOn="@string/wednesday" />

                <View
                    android:id="@+id/repeatDaysDivider4"
                    android:layout_width="@dimen/repeat_days_margin"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <ToggleButton
                    android:id="@+id/thu"
                    android:layout_width="@dimen/add_task_size"
                    android:layout_height="@dimen/add_task_size"
                    android:background="@drawable/repeat_days_button"
                    android:checked="true"
                    android:text="@string/thursday"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textOff="@string/thursday"
                    android:textOn="@string/thursday" />

                <View
                    android:id="@+id/repeatDaysDivider5"
                    android:layout_width="@dimen/repeat_days_margin"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <ToggleButton
                    android:id="@+id/fri"
                    android:layout_width="@dimen/add_task_size"
                    android:layout_height="@dimen/add_task_size"
                    android:background="@drawable/repeat_days_button"
                    android:checked="true"
                    android:text="@string/friday"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textOff="@string/friday"
                    android:textOn="@string/friday" />

                <View
                    android:id="@+id/repeatDaysDivider6"
                    android:layout_width="@dimen/repeat_days_margin"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <ToggleButton
                    android:id="@+id/sat"
                    android:layout_width="@dimen/add_task_size"
                    android:layout_height="@dimen/add_task_size"
                    android:background="@drawable/repeat_days_button"
                    android:text="@string/saturday"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textOff="@string/saturday"
                    android:textOn="@string/saturday" />
            </LinearLayout>

            <TextView
                android:id="@+id/taskTypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/activity_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="?android:attr/textColorPrimary" />

            <RadioGroup
                android:id="@+id/taskTypeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingStart="@dimen/add_task_page_padding"
                android:paddingEnd="0dp">

                <RadioButton
                    android:id="@+id/oneTimeInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/check_off" />

                <RadioButton
                    android:id="@+id/counterInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/counter" />

                <RadioButton
                    android:id="@+id/chronometerInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chronometer" />

                <RadioButton
                    android:id="@+id/timerInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timer" />
            </RadioGroup>

            <TextView
                android:id="@+id/dailyGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_vertical"
                android:text="@string/daily_goal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="?android:attr/textColorPrimary"
                android:visibility="invisible" />

            <RelativeLayout
                android:id="@+id/dailyGoalInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:orientation="vertical"
                android:paddingStart="@dimen/add_task_page_padding"
                android:paddingEnd="0dp"
                android:visibility="visible">

                <EditText
                    android:id="@+id/dailyGoalNumInput"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/num_times"
                    android:ems="10"
                    android:gravity="center"
                    android:importantForAutofill="auto"
                    android:inputType="number"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/dailyGoalTimeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/dailyGoalHourInput"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hour" />

                    <EditText
                        android:id="@+id/dailyGoalMinInput"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/minute"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/minute" />

                    <View
                        android:id="@+id/divider8"
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/listDivider"
                        android:visibility="invisible" />

                    <EditText
                        android:id="@+id/dailyGoalCyclesInput"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="number"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/cycles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cycles"
                        android:visibility="gone" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>